# Dorothy-A-Financial-Simulator

./: README.md
dorothy/: CMakeCache.txt  CMakeLists.txt  Config.cpp  Config.h  DataAccess.cpp  DataAccess.h  DateTime.cpp  DateTime.h  Doxyfile  Makefile  PrefixHeader.pch  Simulator.cpp  Simulator.h  TickerData.cpp  TickerData.h  TradingStock.cpp  TradingStock.h  Transaction.cpp  Transaction.h  Utilities.cpp  Utilities.h  cmake_install.cmake  config1.ini  config2.ini  dorothy  main.cpp
dorothy/data/constituents/: universe.txt
dorothy/data/ticker/: AAPL_.csv  AA_.csv  ABBV_.csv  ABC_.csv  ABT_.csv  ACE_.csv  ACN_.csv  ACT_.csv  ADBE_.csv  ADI_.csv  ADM_.csv  ADP_.csv  ADSK_.csv  ADS_.csv  ADT_.csv  AEE_.csv  AEP_.csv  AES_.csv  AET_.csv  AFL_.csv  AGN_.csv  AIV_.csv  AIZ_.csv  AKAM_.csv  ALLE_.csv  ALL_.csv  ALTR_.csv  ALXN_.csv  AMAT_.csv  AME_.csv  AMGN_.csv  AMP_.csv  AMT_.csv  AMZN_.csv  AN_.csv  AON_.csv  APA_.csv  APC_.csv  APD_.csv  APH_.csv  (+458 more)
dorothy/documentation/html/: _c_make_c_x_x_compiler_id_8cpp_source.html  _config_8h_source.html  _data_access_8cpp__incl.map  _data_access_8h__dep__incl.md5  _data_access_8h__incl.md5  _data_access_8h_source.html  _date_time_8cpp__incl.map  _date_time_8cpp__incl.md5  _date_time_8cpp_source.html  _date_time_8h.html  _date_time_8h_source.html  _prefix_header_8pch__dep__incl.md5  _prefix_header_8pch__incl.map  _simulator_8cpp__incl.md5  _simulator_8h.html  _simulator_8h__dep__incl.md5  _simulator_8h__incl.map  (+227 more)
dorothy/publications/: DailyReport0.csv  MonthlyReport0.csv  SignalReport0.csv  TransactionReport0.txt
(+772 files in other folders)
